	- Fix long-standing problem where directory names that began
	  with "~", but that weren't users' home directories, could be
	  erroneously treated as users' home directories (e.g. "~d/"
	  would be treated as "~daemon/"). (DLR, found by Justin
	  Fletcher)
  input_tab()
	- Don't bother checking if num_matches is less than zero, as
	  it's a size_t and hence unsigned. (DLR)
- winio.c:
  get_escape_seq_kbinput()
	- Add missing comments. (DLR)
- doc/syntax/asm.nanorc, doc/syntax/c.nanorc, doc/syntax/sh.nanorc:
	- Copy the regex that highlights trailing whitespace from
	  doc/syntax/java.nanorc to these files, as it's also useful in
	  them. (Mike Frysinger, minor tweaks by DLR)

GNU nano 2.0.4 - 2007.04.06
- winio.c:
  get_escape_seq_kbinput()
	- Add escape sequences for Terminal. (DLR)
- doc/faq.html:
	- Update email address. (DLR)
- AUTHORS:
	- Update email address. (DLR)

GNU nano 2.0.3 - 2007.01.29
- General:
	- Miscellaneous comment fixes. (DLR)
	- More int -> bool conversions. (DLR)
	- Don't install the nanorc manpages or generate their HTML
	  versions if nano is built without nanorc support.  Changes to
	  configure.ac, doc/man/Makefile.am, and doc/man/fr/Makefile.am.
	  (DLR)
	- Simplify the commands that generate HTML documentation in
	  order to remove unnecessary usage of cat.  Changes to
	  doc/man/Makefile.am, doc/man/fr/Makefile.am, and
	  doc/texinfo/Makefile.am. (DLR)
- files.c:
  do_writeout()
	- When setting retval to the return value of
	  write_(marked_)?file(), use the "?" operator instead of an
	  if/else clause. (DLR)
  is_dir()
	- Don't assign dirptr's value using buf until we've asserted
	  that buf isn't NULL. (DLR)
	- Remove unneeded assert. (DLR)
- proto.h:
	- Add missing is_dir() prototype. (DLR)
- search.c:
  regexp_init()
	- Don't assign rc's value via regcomp() until we've asserted
	  that regexp_compiled is FALSE. (DLR)
- text.c:
  do_alt_speller()
	- Rename variable altspell_error to alt_spell_error, for
	  consistency. (DLR)